tests/syntax_error/funcptr_named_arg.jou
def good(x: funcptr(int) -> int) -> None:
    pass

# TODO: not the best error message
def bad(x: funcptr(y: int) -> int) -> None:  # Error: expected a ')', got ':'
    pass
